--- a/src/components/header/Header.style.scss
+++ b/src/components/header/Header.style.scss
@@ -8,6 +8,11 @@
 	justify-content: space-between;
 	align-items: center;
 
+	i {
+		color: #fff;
+		font-size: 2rem;
+	}
+
 	a {
 		text-decoration: none;
 	}
