--- a/src/pages/restaurant/Restaurant.style.scss
+++ b/src/pages/restaurant/Restaurant.style.scss
@@ -1,24 +1,43 @@
 .Restaurant {
-  height: calc(100vh - 60px);
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
+	height: calc(100vh - 60px);
+	width: 100vw;
+	display: flex;
+	flex-direction: column;
 
-  h2 {
-    color: #fff;
-  }
+	h2 {
+		color: #fff;
+	}
 
-  &--menuList {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-  }
+	&--menuList {
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+		align-items: flex-start;
+	}
 
-  .MenuItem {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-  }
+	.MenuItem {
+		height: 100px;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: center;
+		padding: 0 1rem;
+
+		&--title {
+			width: 100%;
+			text-align: left;
+			color: #fff;
+		}
+
+		&--price {
+			font-size: 1rem;
+			color: rgb(216, 209, 209);
+		}
+
+		&--desc {
+			color: #fff;
+			font-size: 1rem;
+		}
+	}
 }
